borro titulo de primos entre ej 23 y 24

--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -182,7 +182,7 @@
         $$
           \begin{array}{c}
             4 \magenta{(-5)} + 4 = \blue{-16} \Tilde \\
-            4 \magenta{(-2)} + 4 = \blue{-4} \Tilde  \\
+            4 \magenta{(-2)} + 4 = \blue{-4} \Tilde
           \end{array}
         $$
         reemplazando esos valores de $a$ en $\llamada1$ se obtiene tiene valor $-1 \en \enteros$.
