fix extra 19 guia 4

--- a/4-guia/ejercicios-4-extra/ej-extra-19-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-19-4.tex
@@ -42,7 +42,7 @@ $$
 	=
 	36 \cdot 6^{2k} - 35k -35 -1
 	=
-	36 \cdot (6^{2h} - 1) - 35k \congruente 0 \ (245) \llamada1
+	36 \cdot (6^{2k} - 1) - 35k \congruente 0 \ (245) \llamada1
 $$
 Acomodo la \purple{hipótesis inductiva}:
 $$
