--- a/4-guia/ejercicios-4-extra/ej-extra-19-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-19-4.tex
@@ -19,6 +19,8 @@ $$
 	p(n) : \congruencia{6^{2n} - 35n -1}{0}{245} \quad \paratodo n \en \naturales
 $$
 
+\medskip
+
 \textit{Caso base:}
 $$
 	p(\blue{1}) :
@@ -26,6 +28,8 @@ $$
 		6^{2 \cdot \blue{1}} - 35 \cdot {\blue{1}} -1 = 0 }{0}{245}
 $$
 Por lo que $p(1)$ resultó ser verdadera.
+
+\medskip
 
 \textit{Paso inductivo:}
 Asumo que
