aportes ej 18 guia 3

--- a/3-guia/ejercicios-3/ej-18-3.tex
+++ b/3-guia/ejercicios-3/ej-18-3.tex
@@ -70,12 +70,12 @@
         Ahora para armar los conjuntos $B$ con $\#B = 5$ tengo que tomar solo 5
         elementos ya sea de $P$ o 5 elementos de $I$. Eso es tomar 5 elementos de un conjunto de 10:
         $$
-            \binom{10}{5} = 252
+          \binom{10}{5} = 252
         $$
         Entonces puedo armarme 252 conjuntos $B$ con los elementos del conjunto $P$
         y también 252 con los de $I$. Por lo tanto la cantidad total de conjuntos que satisfacen lo pedido:
         $$
-        \cajaResultado{252 + 252 = 504}
+          \cajaResultado{252 + 252 = 504}
         $$
 \end{enumerate}
 
@@ -85,4 +85,5 @@
   %\aporte{url}{nombre icono}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://www.instagram.com/jjean.gibert}{Jean \instagram}
+  \item \aporte{https://github.com/nicosaadjian}{Nico S \github}
 \end{aportes}
