Add ejercicio 8 guia 3

--- a/3-guia/ejercicios-3/ej-7-3.tex
+++ b/3-guia/ejercicios-3/ej-7-3.tex
@@ -1,1 +1,7 @@
-\ejercicio\hacer
+\begin{enunciado}{\ejercicio}
+  María tiene una colección de 17 libros distintos que quiere guardar en 3 cajas:
+  una roja, una amarilla y una azul.
+  ¿De cuántas maneras distintas puede distribuir los libros en las cajas?
+\end{enunciado}
+
+\hacer
