general guia 4 update

--- a/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-1-4.tex
@@ -39,6 +39,6 @@ Concluyendo hay un total de \yellow{60 divisores distintos}, cuya \yellow{suma e
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/TobLoni}{Tobia Loni \github}
 \end{aportes}
