--- a/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-10-4.tex
@@ -66,7 +66,5 @@ también lo será $p(n) \paratodo \en \naturales$.
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
