--- a/4-guia/ejercicios-4-extra/ej-extra-11-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-11-4.tex
@@ -23,15 +23,15 @@ $$
 $$
 
 La última expresión $a \cdot (a-1)$ es siempre \magenta{par}, dado que es un número multiplicado por su consecutivo.
-{\tiny Otra forma de mostrar la paridad sería reemplazando
-por $2k$ y luego por $2k+1$ y ver que los resultados son siempre impares.
-$$
-  \begin{array}{c}
-    a = \ub{2k}{par} \entonces (2k)^2 - 2k + 1 = \ob{\ub{2 \cdot (2k^2 -k)}{par} + 1}{impar} \Tilde                 \\
-    a = \ub{2k+1}{impar} \entonces (2k+1)^2 - 2(k+1) + 1 = \ob{\ub{2 \cdot (2k^2 + 3k + 2)}{par} + 1}{impar} \Tilde \\
-  \end{array}
-$$
-Hacé lo que más te guste \faIcon[regular]{smile}!}\par\medskip
+  {\tiny Otra forma de mostrar la paridad sería reemplazando
+    por $2k$ y luego por $2k+1$ y ver que los resultados son siempre impares.
+    $$
+      \begin{array}{c}
+        a = \ub{2k}{par} \entonces (2k)^2 - 2k + 1 = \ob{\ub{2 \cdot (2k^2 -k)}{par} + 1}{impar} \Tilde                 \\
+        a = \ub{2k+1}{impar} \entonces (2k+1)^2 - 2(k+1) + 1 = \ob{\ub{2 \cdot (2k^2 + 3k + 2)}{par} + 1}{impar} \Tilde \\
+      \end{array}
+    $$
+    Hacé lo que más te guste \faIcon[regular]{smile}!}\par\medskip
 
 Dado que esa expresión es impar podemos reducir el conjunto de divisores a:
 
@@ -62,18 +62,15 @@ Obtenemos que 5 \textit{no es un potencial mcd}, por lo que 15 tampoco será un 
 
 Con la información obtenida se puede concluir que:
 $$
-d = 
-\llave{l}{
-        3 \text{ si } \congruencia{a}{2}{3}\\ 
-        1 \text{ si } \noCongruencia{a}{2}{3}
-}
+  d =
+  \llave{l}{
+    3 \text{ si } \congruencia{a}{2}{3} \\
+    1 \text{ si } \noCongruencia{a}{2}{3}
+  }
 $$
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/maxiitietze}{Maxi T. \github}
-
 \end{aportes}
