--- a/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-12-4.tex
@@ -1,5 +1,5 @@
 \begin{enunciado}{\ejExtra}
-        \hypertarget{ejExtra:4-12-coprimos}{Determinar} para cada par $(a,b) \en \enteros^2$ tal que $(a:b) = 7 $ el valor de
+  \hypertarget{ejExtra:4-12-coprimos}{Determinar} para cada par $(a,b) \en \enteros^2$ tal que $(a:b) = 7 $ el valor de
   $$
     (a^2b^4 : 7^5(-a + b)).
   $$
@@ -73,6 +73,5 @@ $$
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
