--- a/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-18-4.tex
@@ -76,5 +76,5 @@ en el enunciado metieron un \red{5} ahí que no está ni en $a$ ni en $b$, ojo c
 \textit{Fin de nota que puede ser relevante:}\par
 
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
