--- a/4-guia/ejercicios-4-extra/ej-extra-2-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-2-4.tex
@@ -39,3 +39,7 @@ $$
 $$
 
 El $n$ que cumple lo pedido sería $n = 2^2 \cdot 3^1 \cdot 5^1 \cdot 7^1 \cdot 79^1$
+
+\begin{aportes}
+\item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
