--- a/4-guia/ejercicios-4-extra/ej-extra-3-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-3-4.tex
@@ -67,8 +67,10 @@ El caso $\llamada3$ es lo mismo que el caso $\llamada2$.\par
 Se concluye entonces que $(3cd : c^2 + d^2) = 1$ con $(c:d) = 1$.
 Así probando que $(3ab : a^2 + b^2) = 25$ con
 $\llave{l}{
-  a = 5c \\
-  b = 5d
-}$
+    a = 5c \\
+    b = 5d
+  }$
 
-
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
