--- a/4-guia/ejercicios-4-extra/ej-extra-4-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-4-4.tex
@@ -61,5 +61,9 @@
           \congruencia{n}{0}{d}
           \entonces
           \congruencia{n^m}{0}{d}
-                $ y en los otros la mismas cosas que antes... \textit{ponele}
+        $ y en los otros la mismas cosas que antes... \textit{ponele}
 \end{itemize}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
