--- a/4-guia/ejercicios-4-extra/ej-extra-6-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-6-4.tex
@@ -40,3 +40,7 @@ $\llamada{2}\to
       \multicolumn{2}{l}{(1:-2) \entonces D = 1 \to d = (6:-12) = \ub{6}{6\cdot D}}
     }
   }$
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
