--- a/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-7-4.tex
@@ -75,3 +75,7 @@ $$
     (a^3 + 4a + 1 : a^2 + 2) = 3
   } \Tilde
 $$
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
