--- a/4-guia/ejercicios-4-extra/ej-extra-8-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-8-4.tex
@@ -104,3 +104,7 @@
         $
         \boxed{\sumatoria{k=0}{255} a_k = 5} \Tilde
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
