--- a/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-9-4.tex
@@ -86,6 +86,11 @@ $
   \llave{l}{
     \congruencia{a}{23}{25}\\
     \congruencia{a}{24 \congruente \red{-1}}{25}
-  }$\\
+  }$
+
 Se puede ver también así que el único valor de $a \en \enteros$,
 que cumple $\llamada1$ es $a = -1$
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
