--- a/4-guia/ejercicios-4/ej-9-4.tex
+++ b/4-guia/ejercicios-4/ej-9-4.tex
@@ -35,11 +35,15 @@
   \item
         $r_{28}(7a^2 + 12) = r_{28}(7 \cdot r_{28}(a)^2 + 12) \flecha{¿qué es} r_{28}(a)$\\
         $\llave{l}{
-            a = 18 \cdot q + 5 \flecha{busco algo}[para el 28]\\
+            a = 18 \cdot q + 5 \flecha{busco algo}[para el 28]                              \\
             14 \cdot a = \ub{252 \cdot q}{28 \cdot 9\cdot q } + 70
             \flecha{corrijo según}[condición resto]
-            28 \cdot 9\cdot q + \ub{2\cdot28 +14}{70} = 28\cdot (9\cdot q + 2) + 14  \Tilde\\
+            28 \cdot 9\cdot q + \ub{2\cdot28 +14}{70} = 28\cdot (9\cdot q + 2) + 14  \Tilde \\
             \flecha{por lo}[tanto] 14a = 28\cdot q' + 14 \entonces \congruencia{14\cdot a}{14}{28} \sisolosi  \congruencia{a}{1}{28}
           }$\\
         Ahora que sé que $r_{28}(a) = 1$ sale que $r_{28}(7a^2 + 12) = r_{28}(7 \cdot \ub{r_{28}(a)^2}{1} + 12) = r_{28}(19)=19 \Tilde$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
