--- a/4-guia/ejercicios-4-extra/ej-extra-13-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-13-4.tex
@@ -45,6 +45,5 @@ $$
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
