--- a/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-14-4.tex
@@ -96,6 +96,6 @@ $$
 
 % Contribuciones
 \begin{aportes}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/daniTadd}{Dani Tadd \github}
 \end{aportes}
