--- a/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-15-4.tex
@@ -80,5 +80,5 @@ Así que el único valor que puede tomar la expresión $(a^2+3b^2 : 2a^2 + 11b^2
 
 \begin{aportes}
   \item \aporte{https://github.com/JowinTeran}{Ale Teran \github}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
