--- a/4-guia/ejercicios-4-extra/ej-extra-16-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-16-4.tex
@@ -31,7 +31,7 @@ $$
   \scriptstyle
   \begin{array}{rcl}
     \scriptstyle
-    \sumatoria{k = 4}{134} k^3 & \scriptstyle=                & \scriptstyle4^3 + 5^3 + 6^3 + 7^3 + 8^3 + 9^3 + 10^3 + \cdots + 126^3 + 124^3+125^3+126^3+ 127^3 + 128^3 + 129^3 + 130^3 + 131^3 + 132^3 + 133^3 + 134^3                                         \\
+    \sumatoria{k = 4}{134} k^3 & \scriptstyle=                & \scriptstyle4^3 + 5^3 + 6^3 + 7^3 + 8^3 + 9^3 + 10^3 + \cdots + 126^3 + 124^3+125^3+126^3+ 127^3 + 128^3 + 129^3 + 130^3 + 131^3 + 132^3 + 133^3 + 134^3                                                                    \\
                                & \scriptstyle \congruente     & \scriptstyle \ub{\scriptstyle1 + (-1) + (-1) + 0 + 1 + 1 + (-1)}{= \purple{0}} + \cdots +  \ub{\scriptstyle1 + (-1) + (-1) + 0 + 1 + 1 + (-1)}{= \purple{0}} + \ub{ \scriptstyle1 + (-1) + (-1) + 0 + 1}{= \green{0}} \ (7) \\
                                & \scriptstyle \igual{\red{!}} & \scriptstyle 18 \cdot \purple{0} + \green{0}\ (7) \congruente 0\ (7)
   \end{array}
@@ -65,8 +65,6 @@ $$
 
 % Contribuciones
 \begin{aportes}
-  %% iconos : \github, \instagram, \tiktok, \linkedin
-  %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://www.instagram.com/juaanparajo}{Juan Parajó \instagram}
 \end{aportes}
