--- a/4-guia/ejercicios-4/ej-1-4.tex
+++ b/4-guia/ejercicios-4/ej-1-4.tex
@@ -125,5 +125,5 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
