--- a/4-guia/ejercicios-4/ej-3-4.tex
+++ b/4-guia/ejercicios-4/ej-3-4.tex
@@ -27,17 +27,17 @@
 
         $$
           \llave{l}{
-            a - b \divideA a^k -b^k\\
+            a - b \divideA a^k -b^k \\
             a - b \divideA a^k -b^k
           }
           \Entonces{$\times \magenta{a}$}[$\times \magenta{b}$]
           \llave{l}{
-          a - b \divideA a^{k+1} - ab^k\\
-          a - b \divideA ba^k -b^{k+1}
+            a - b \divideA a^{k+1} - ab^k \\
+            a - b \divideA ba^k -b^{k+1}
           }
           \Entonces{$+$}
           \llave{l}{
-            a - b \divideA a^{k+1} - b^{k+1}.\\
+            a - b \divideA a^{k+1} - b^{k+1}. \\
           }\Tilde
         $$
 
@@ -55,22 +55,22 @@
         $
           \llave{rcl}{
             \magenta{a} \cdot a = a^2
-            &\conga{a+b}&
+                  & \conga{a+b} &
             \magenta{a} \cdot (-b)
             \conga{a+b}
-            (-1)^2 b \\
-            \quad &\vdots& \quad \ot\llamada{1}\\
-            a^n &\conga{a+b}& (-1)^n \cdot b^n
+            (-1)^2 b                                 \\
+            \quad & \vdots      & \quad \ot\llamada{1} \\
+            a^n   & \conga{a+b} & (-1)^n \cdot b^n
             \to
             \llave{ll}{
-              \congruencia{a^n}{ b^n}{a+b} & \text{con n par}  \\
-              \congruencia{a^n}{(-1)^n \cdot b^n}{a+b}   & \text{con n impar} \\
+              \congruencia{a^n}{ b^n}{a+b}             & \text{con n par}   \\
+              \congruencia{a^n}{(-1)^n \cdot b^n}{a+b} & \text{con n impar} \\
             }
           }\\
           \boxed{
             \llave{rccl}{
-              \text{Con $n$ par: } & \congruencia{a^n}{b^n}{a+b} &\entonces& a+b \divideA a^n - b^n  \\
-              \text{Con $n$ impar: }  &\congruencia{a^n}{- b^n}{a+b}& \entonces& a+b \divideA a^n + b^n
+              \text{Con $n$ par: }   & \congruencia{a^n}{b^n}{a+b}   & \entonces & a+b \divideA a^n - b^n \\
+              \text{Con $n$ impar: } & \congruencia{a^n}{- b^n}{a+b} & \entonces & a+b \divideA a^n + b^n
             }
           }
         $\par
@@ -107,11 +107,11 @@
           \llave{c}{
             \congruencia{a}{-b}{a+b}
             \entonces
-            \congruencia{a^k}{(-1)^k\cdot b^k}{a+b}\\
-            \Entonces{multiplico}[por $\yellow{a}$]\\
+            \congruencia{a^k}{(-1)^k\cdot b^k}{a+b}                                                         \\
+            \Entonces{multiplico}[por $\yellow{a}$]                                             \\
             \yellow a \cdot a^k =
-            \congruencia{a^{k+1}}{(-1)^k\cdot \ub{\yellow a}{ \conga{a+b} -b} \cdot b^k}{a+b}\\
-            \entonces\\
+            \congruencia{a^{k+1}}{(-1)^k\cdot \ub{\yellow a}{ \conga{a+b} -b} \cdot b^k}{a+b} \\
+            \entonces                                                                                       \\
             \congruencia{a^{k+1}}{(-1)^{k+1} \cdot b^{k+1}}{a+b}
             \sisolosi
             a + b \divideA a^{k+1} - (-1)^{k+1} b^{k+1} \Tilde
@@ -121,6 +121,9 @@
         Como $p(1),\ p(k) \ytext p(k+1)$
         son verdaderas por principio de inducción lo es también $p(n) \paratodo n \en \naturales$
 
-
   \item Hecho en el anterior {\Large\faIcon{hands-wash}}.
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
