--- a/4-guia/ejercicios-4/ej-4-4.tex
+++ b/4-guia/ejercicios-4/ej-4-4.tex
@@ -54,5 +54,5 @@ por el principio de inducción también lo será ${p(n) \paratodo n \en \natural
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
 \end{aportes}
