--- a/4-guia/ejercicios-4/ej-7-4.tex
+++ b/4-guia/ejercicios-4/ej-7-4.tex
@@ -92,6 +92,6 @@
 \begin{aportes}
   %% iconos : \github, \instagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
-  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
+  \item \aporte{https://github.com/nad-garraz}{naD GarRaz \github}
 \end{aportes}
 
